# school_meal

./: prediction.py  pyproject.toml  recommendation.py  recommendation_data.csv  식품별_고유값_잔반률_영양성분.csv
