[project]
name = "school-meal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
    "tensorflow>=2.19.0",
    "watchdog>=6.0.0",
]
